# cs4500

./: .gitignore
assignment1/: CwCAPI.cpp  CwCAPI.h  array.h  main.cpp  test-array.h
assignment1/part1/: Makefile  README.md  SORfile  main.cpp  sorer  sorer.cpp  sorer.h  test-sorer.cpp  test-sorer.h  test_sorer.cpp
assignment1/part2/: Repo.md  array.h  list.h  object.h  string.h  test_array.cpp
assignment2/: HashMap.h  Makefile  Object.h  String.h  map.h  object.h  string.h  test-hashmap.cpp  test-hashmap.h  test-hashmap.out  test-map.cpp  test-map.out  test-map1.cpp  test-map1.out
assignment2/part1/: MEMO.md  Makefile  array.h  boolarray.h  floatarray.h  intarray.h  map.h  object.h  queue.h  strarray.h  string.h  strqueue.h
assignment2/part2/: REPO.md
assignment3/part1/: benchmark.sh  benchmark_log.txt  data1.csv  data10.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  generate_sor.py  performance_visualization.py
assignment3/part2/: README.md  array.h  dataframe.h  object.h  sorcolumn.h  string.h
assignment4/: Makefile  array.h  helper.h
assignment4/part1/: CMakeLists.txt  README.md  basic_example.cpp  column.h  dataframe.h  fielder.h  personal_test_suite.cpp  row.h  rower.h  schema.h  submitted_test_1.cpp  submitted_test_2.cpp  submitted_test_3.cpp  submitted_test_4.cpp  submitted_test_5.cpp  submitted_test_6.cpp  submitted_test_7.cpp
assignment4/part2/: CMakeLists.txt  PARALLELMAPREADME.md  modified_dataframe.h  parallel_map_examples.cpp  parallel_map_personal_test_suite.cpp  prowers.h  test_util.h
assignment5/part1/: CMakeLists.txt  ComplexRower.h  MEMO.docx  Makefile  SimpleRower.h  array.h  bench.cpp  column.h  dataframe.h  fielder.h  modified_dataframe.h  row.h  rower.h  schema.h  test_two_rowers.cpp  txt_reader.cpp  txt_reader.h
assignment6/: CMakeLists.txt  main.cpp
assignment6/part2/: Array_serialize.h  Deserializer.h  Message.h  Serializer.h  String_serialize.h  array.h  primitive_serialize.h  serial.h  sockaddr_in_serialize.h  socket_addr.h
submission/part1/: sorer.cpp  sorer_unit_tests  util.h
submission/part2/: array.h  object.h  string.h  test_array.cpp
(+34 files in other folders)
